[tool.poetry]
name = "pycounts_ps"
version = "0.1.0"
description = "A package for counting number of words in a text file"
authors = ["Paramveer Singh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
